--- a/services.css
+++ b/services.css
@@ -126,7 +126,6 @@
 
 /* Package Pricing */
 .package-pricing {
-    text-align: center;
     margin-bottom: var(--space-lg);
     padding: var(--space-lg) 0;
     border-bottom: 1px solid var(--border-color);
@@ -173,6 +172,10 @@
     line-height: 1.3;
     text-transform: uppercase;
     letter-spacing: 0.05em;
+}
+
+.package-features h4:not(:first-child) {
+    margin-top: var(--space-lg);
 }
 
 .package-features ul {
